--- a/1 main.tex
+++ b/1 main.tex
@@ -201,7 +201,7 @@
 %%% To include an abstract, uncomment the following two lines and type
 %%% the abstract in between them:
 \begin{abstract}
-We study toric varieties and their invariants. 
+    Toric varieties serve as a rich interface between algebraic geometry, symplectic geometry, and combinatorics. Their structure is deeply tied to combinatorial objects such as polytopes and fans, which encode their topology and geometry. This thesis explores the construction of toric varieties via moment maps, symplectic reduction, and Geometric Invariant Theory, providing a comprehensive framework for understanding these spaces. The central focus is the application of equivariant cohomology, a refinement of ordinary cohomology, which captures additional symmetries and enriches the topological study of toric varieties. We utilize combinatorial techniques, including localization formulas, shellings, and the Białynicki-Birula decomposition, to analyze the topology and cohomological invariants of these varieties. 
 \end{abstract}
 
 
@@ -240,6 +240,13 @@ We study toric varieties and their invariants.
 % \end{figure}
 
 \section{Introduction}
+Toric varieties are a fundamental class of spaces in algebraic geometry, characterized by their combinatorial and geometric simplicity. They arise naturally in several mathematical disciplines, including symplectic geometry, representation theory, and mathematical physics, see \cite{cannas} and \cite{oda}. They also provide, as Fulton writes in \cite{fulton}, “a remarkably fertile testing ground for general theories.”
+
+In this work, we begin by describing several polytopal constructions that highlight the interplay between algebraic and symplectic geometry, showcasing the fluid transitions between these two perspectives. We then introduce the concept of fans, which provide an equivariant atlas of charts for abstract toric varieties. These combinatorial tools offer a powerful framework for understanding the topology of toric varieties, enabling precise calculations and interpretations. Using these combinatorial insights, we investigate the equivariant cohomology of toric varieties. 
+
+As a refinement of ordinary cohomology, equivariant cohomology captures additional symmetries and provides a richer topological invariant. A unique feature of equivariant cohomology is the localization package for equivariantly formal spaces, developed by Atiyah-Bott and Berline-Vergne. We study the localization formula and the GKM conditions, which are central tools in the analysis of toric varieties. In particular, we introduce the Bialynicki-Birula decomposition, an algebraic analogue of Morse theory, and demonstrate that smooth projective toric varieties are equivariantly formal.
+
+
 \section{Constructing toric varieties}
 \input{2 constructing.tex}
 \section{Equivariant cohomology}
