--- a/refs.bib
+++ b/refs.bib
@@ -11,6 +11,37 @@
   year           = {2011}
 }
 
+@incollection{cannas,
+  author    = {A. Cannas da Silva},
+  title     = {Symplectic toric manifolds},
+  booktitle = {Symplectic Geometry of Integrable Hamiltonian Systems (Barcelona, 2001)},
+  series    = {Adv. Courses Math. CRM Barcelona},
+  publisher = {Birkh\"auser},
+  address   = {Basel},
+  year      = {2003},
+  pages     = {85--173}
+}
+
+@book{fulton,
+  author    = {William Fulton},
+  title     = {Introduction to Toric Varieties},
+  series    = {Annals of Mathematics Studies},
+  volume    = {131},
+  publisher = {Princeton University Press},
+  address   = {Princeton, NJ},
+  year      = {1993},
+  pages     = {180}
+}
+
+@book{oda,
+  author    = {T. Oda},
+  title     = {Lectures on Torus Embeddings and Applications},
+  publisher = {TATA Institute of Fundamental Research},
+  year      = {1978},
+  series    = {TATA Lectures},
+  address   = {Mumbai, India}
+}
+
 @book{mcduff-salamon,
   author         = {McDuff, Dusa and Salamon, Dietmar},
   publisher      = {Oxford University Press},
